--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mocha-starter-kit",
+  "name": "beaufort-cipher",
   "version": "0.0.1",
-  "description": "mocha, starter, kit, js, tests",
+  "description": "js, chiper, beaufort",
   "main": "index.js",
   "author": "Abramov Arthur",
   "license": "MIT",
